# Portifolio_Optimization_Case

./: CHANGELOG.md  LICENSE  PortifolioOptCabal.cabal  README.md  cabal.project.freeze
app/: Main.hs
data/: dow_jones_all_tickers_2024.csv  dowload_all.py
src/: DataLoader.hs  Optimization.hs  Portfolio.hs  Returns.hs  Simulate.hs  Utilities.hs
