cabal-version:      3.4
name:               PortifolioOptCabal
version:            0.1.0.0
synopsis:           Portfolio optimization tools
description:        A tool to load stock data and perform portfolio optimization
license:            MIT
license-file:       LICENSE
author:             RodrigoAnciaes
maintainer:         81170574+RodrigoAnciaes@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

library
    -- Import common warning flags.
    import:           warnings
    -- Modules exported by the library.
    exposed-modules:  DataLoader,
                      Portfolio,
                      Returns,
                      Optimization,
                      Utilities
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1,
                      time,
                      directory,
                      split,
                      vector,
                      random,
                      containers,
                      parallel,
                      deepseq
    -- Directories containing source files.
    hs-source-dirs:   src
    -- Base language which the package is written in.
    default-language: GHC2021

executable PortifolioOptCabal
    -- Import common warning flags.
    import:           warnings
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1,
                      PortifolioOptCabal,
                      time,
                      vector,
                      containers,
                      parallel,
                      deepseq,
                      random
    -- Directories containing source files.
    hs-source-dirs:   app
    -- Base language which the package is written in.
    default-language: GHC2021